# thatEEguyBackend

./: .env.example  .gitignore  Dockerfile  Procfile  build.sh  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme.md  render.yaml  requirements.txt
accounts/: forms.py  urls.py  views.py
accounts/static/accounts/css/: auth.css
accounts/templates/: login.html
accounts/templates/accounts/: register.html  signup.html
accounts/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: article.css  custom.css  stable.css
blog/static/blog/js/: custom_tinymce.js  previewpost.js  responsive-nav.js
blog/templates/: about.html  base.html  contact.html  index.html  newpost.html  post_detail.html  post_draft_list.html  post_edit.html  res_stable.css
blog/templatetags/: tags.py
blogger/: asgi.py  settings.py  urls.py  wsgi.py
docs/: readme.md
templates/: base.html  base_auth.html
thateeguy/: asgi.py  settings.py  urls.py  wsgi.py
