[tool.poetry]
name = "thateeguybackend"
version = "0.1.0"
description = ""
authors = ["Tarunesh Gautam"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "2.9.10"
django = "4.2.16"
django-taggit = "1.2.0"
gunicorn = "19.9.0"
whitenoise = "4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
