[tool.poetry]
name = "blogger"
version = "0.1.0"
description = "A django app"
authors = ["Tarunesh Gautam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
django-taggit = "^6.1.0"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
psycopg = "^3.2.3"
dj-database-url = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
